# kind-local-registry

./: .dockerignore  .env  .gitignore  COMMANDS.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
k8s/app/: configmap.yaml  deployment.yaml  service.yaml
k8s/cluster/: kind-config.yaml
scripts/: start-from-k8s.sh  start-lint.sh  start.sh
src/: database.py  main.py  models.py  settings.py
